--- a/HW13/Front_Project/SecondProject/index.html
+++ b/HW13/Front_Project/SecondProject/index.html
@@ -252,12 +252,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
-                        preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="var(--bs-secondary-color)" />
-                    </svg>
+                    <img src="img/testimonials-3.jpg" alt="nothing" style="border-radius:50%; width: 150px;">
                     <h2 class="fw-normal">Heading</h2>
                     <p>Some representative placeholder content for the three columns of text below the carousel. This is
                         the
@@ -274,12 +269,8 @@
                     <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
                 </div><!-- /.col-lg-4 -->
                 <div class="col">
-                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
-                        preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="var(--bs-secondary-color)" />
-                    </svg>
+                    <img src="img/testimonials-2.jpg" alt="nothing" style="border-radius:50%; width: 150px;">
+                    <title>Placeholder</title>
                     <h2 class="fw-normal">Heading</h2>
                     <p>And lastly this, the third column of representative placeholder content.</p>
                     <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
