--- a/HW13/Front_Project/SecondProject/index.html
+++ b/HW13/Front_Project/SecondProject/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 
 <body>
     <!-- NAVBAR SECTION -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand navbar-dark bg-dark">
         <div class="container px-5">
             <a class="navbar-brand" href="#!">Start Bootstrap</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -51,8 +52,9 @@
         <div class="container px-5 my-5">
             <div class="row gx-5">
                 <div class="col-lg-4 mb-5 mb-lg-0">
-                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
-                            class="bi bi-collection"></i></div>
+                    <div class="SquareForIcon bg-primary bg-gradient text-white rounded-3 mb-3">
+                        <i class="bi bi-collection"></i>
+                    </div>
                     <h2 class="h4 fw-bolder">Featured title</h2>
                     <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
                         sentence and probably just keep going until we run out of words.</p>
@@ -62,7 +64,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 mb-5 mb-lg-0">
-                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i>
+                    <div class="SquareForIcon bg-primary bg-gradient text-white rounded-3 mb-3"><i
+                            class="bi bi-building"></i>
                     </div>
                     <h2 class="h4 fw-bolder">Featured title</h2>
                     <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
@@ -73,7 +76,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4">
-                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i>
+                    <div class="SquareForIcon bg-primary bg-gradient text-white rounded-3 mb-3"><i
+                            class="bi bi-toggles2"></i>
                     </div>
                     <h2 class="h4 fw-bolder">Featured title</h2>
                     <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
@@ -283,7 +287,8 @@
     <section class="bg-light py-5">
         <div class="container px-5 my-5 px-5">
             <div class="text-center mb-5">
-                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i>
+                <div class="SquareForIcon bg-primary bg-gradient text-white rounded-3 mb-3"><i
+                        class="bi bi-envelope"></i>
                 </div>
                 <h2 class="fw-bolder">Get in touch</h2>
                 <p class="lead mb-0">We'd love to hear from you</p>
