--- a/HW13/Front_Project/SecondProject/index.html
+++ b/HW13/Front_Project/SecondProject/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-</head>
+    <link rel="stylesheet" href="styles.css">
 
 <body>
     <!-- NAVBAR SECTION -->
