--- a/HW13/Front_Project/SecondProject/index.html
+++ b/HW13/Front_Project/SecondProject/index.html
@@ -256,14 +256,6 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <img src="img/testimonials-3.jpg" alt="nothing" style="border-radius:50%; width: 150px;">
-                    <h2 class="fw-normal">Heading</h2>
-                    <p>Some representative placeholder content for the three columns of text below the carousel. This is
-                        the
-                        first column.</p>
-                    <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-                </div><!-- /.col-lg-4 -->
-                <div class="col">
                     <img src="img/testimonials-1.jpg" alt="nothing" style="border-radius:50%; width: 150px;">
                     <title>Placeholder</title>
                     <h2 class="fw-normal">Heading</h2>
@@ -271,15 +263,27 @@
                         second
                         column.</p>
                     <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-                </div><!-- /.col-lg-4 -->
+                </div>
+                <!-- /.col-lg-4 -->
                 <div class="col">
                     <img src="img/testimonials-2.jpg" alt="nothing" style="border-radius:50%; width: 150px;">
                     <title>Placeholder</title>
                     <h2 class="fw-normal">Heading</h2>
                     <p>And lastly this, the third column of representative placeholder content.</p>
                     <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-                </div><!-- /.col-lg-4 -->
-            </div><!-- /.row -->
+                </div>
+                <!-- /.col-lg-4 -->
+                <div class="col">
+                    <img src="img/testimonials-3.jpg" alt="nothing" style="border-radius:50%; width: 150px;">
+                    <h2 class="fw-normal">Heading</h2>
+                    <p>Some representative placeholder content for the three columns of text below the carousel. This is
+                        the
+                        first column.</p>
+                    <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+                </div>
+                <!-- /.col-lg-4 -->
+            </div>
+            <!-- /.row -->
         </div>
     </section>
 
