--- a/HW13/Front_Project/SecondProject/index.html
+++ b/HW13/Front_Project/SecondProject/index.html
@@ -27,7 +27,6 @@
             </div>
         </div>
     </nav>
-
     <!-- HEADER SECTION -->
     <header class="bg-dark py-5">
         <div class="container px-5">
@@ -368,8 +367,8 @@
         </div>
     </section>
 
-
-    <!-- Footer-->
+    <!-- Old Footer -->
+    <!--
     <footer class="py-5 bg-dark">
         <div class="container mt-5">
             <div class="row align-items-center">
@@ -386,14 +385,46 @@
                     <a href="">Privacy Policy</a>
                 </div>
             </div>
-
-
-
         </div>
     </footer>
+-->
 
-
-
+    <!-- New Footer-->
+    <footer class="footer bg-dark ">
+        <div class="container">
+            <div class="row py-5 ">
+                <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
+                    <ul class="list-inline mb-2">
+                        <li class="list-inline-item text-decoration-none"><a
+                                href="https://storied-daifuku-9fd79c.netlify.app/#!">About</a></li>
+                        <li class="list-inline-item text-decoration-none">⋅</li>
+                        <li class="list-inline-item text-decoration-none"><a
+                                href="https://storied-daifuku-9fd79c.netlify.app/#!">Contact</a></li>
+                        <li class="list-inline-item text-decoration-none">⋅</li>
+                        <li class="list-inline-item text-decoration-none"><a
+                                href="https://storied-daifuku-9fd79c.netlify.app/#!">Terms of Use</a></li>
+                        <li class="list-inline-item text-decoration-none">⋅</li>
+                        <li class="list-inline-item text-decoration-none"><a
+                                href="https://storied-daifuku-9fd79c.netlify.app/#!">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
+                    <ul class="list-inline mb-0">
+                        <li class="list-inline-item me-4">
+                            <a href="https://storied-daifuku-9fd79c.netlify.app/#!"><i class="bi-facebook fs-3"></i></a>
+                        </li>
+                        <li class="list-inline-item me-4">
+                            <a href="https://storied-daifuku-9fd79c.netlify.app/#!"><i class="bi-twitter fs-3"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://storied-daifuku-9fd79c.netlify.app/#!"><i
+                                    class="bi-instagram fs-3"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="bootstrap.bundle.min.js"></script>
 </body>
