new navbar created

--- a/HW13/Front_Project/SecondProject/index.html
+++ b/HW13/Front_Project/SecondProject/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <!-- NAVBAR SECTION -->
+    <!--
     <nav class="navbar navbar-expand navbar-dark bg-dark">
         <div class="container px-5">
             <a class="navbar-brand" href="#!">Start Bootstrap</a>
@@ -27,11 +28,39 @@
             </div>
         </div>
     </nav>
+    -->
+    <nav class="navbar bg-dark">
+        <div class="container">
+            <div class="col-6 justify-content-start">
+                <ul class="nav">
+                    <li class="nav-item justify-content-start">
+                        <a class="nav-link text-50" href="#!">Start Bootstrap</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-76">
+                <ul class="nav  justify-content-end">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#!">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#!">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#!">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#!">Services</a>
+                    </li>
+            </div>
+            </ul>
+        </div>
+    </nav>
     <!-- HEADER SECTION -->
     <header class="bg-dark py-5">
         <div class="container px-5">
             <div class="row gx-5 justify-content-center">
-                <div class="col-lg-6">
+                <div class="col-6">
                     <div class="text-center my-5">
                         <h1 class="display-5 fw-bolder text-white mb-2">Present your business in a whole new way</h1>
                         <p class="lead text-white-50 mb-4">Quickly design and customize responsive mobile-first sites
