--- a/HW13/Front_Project/SecondProject/index.html
+++ b/HW13/Front_Project/SecondProject/index.html
@@ -29,16 +29,18 @@
         </div>
     </nav>
     -->
+
+    <!-- New Navbar-->
     <nav class="navbar bg-dark">
         <div class="container">
-            <div class="col-6 justify-content-start">
+            <div class="col-5 justify-content-start">
                 <ul class="nav">
                     <li class="nav-item justify-content-start">
                         <a class="nav-link text-50" href="#!">Start Bootstrap</a>
                     </li>
                 </ul>
             </div>
-            <div class="col-76">
+            <div class="col-7">
                 <ul class="nav  justify-content-end">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#!">Home</a>
@@ -56,19 +58,26 @@
             </div>
         </div>
     </nav>
+
     <!-- HEADER SECTION -->
     <header class="bg-dark py-5">
         <div class="container px-5">
             <div class="row gx-5 justify-content-center">
                 <div class="col-6">
                     <div class="text-center my-5">
-                        <h1 class="display-5 fw-bolder text-white mb-2">Present your business in a whole new way</h1>
-                        <p class="lead text-white-50 mb-4">Quickly design and customize responsive mobile-first sites
-                            with Bootstrap, the world’s most popular front-end open source toolkit!</p>
-                        <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
-                            <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
-                            <a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
-                        </div>
+                        <h1 class="display-5 fw-bolder text-white mb-2">
+                            Present your business in a whole new way
+                        </h1>
+                        <p class="lead text-white-50 mb-4">
+                            Quickly design and customize responsive mobile-first sites
+                            with Bootstrap, the world's most popular front-end open source toolkit!
+                        </p>
+                        <a class="btn btn-primary" href="#features">
+                            Get Started
+                        </a>
+                        <a class="btn btn-outline-light " href="#!">
+                            Learn More
+                        </a>
                     </div>
                 </div>
             </div>
