--- a/HW13/Front_Project/SecondProject/index.html
+++ b/HW13/Front_Project/SecondProject/index.html
@@ -10,27 +10,8 @@
     <link rel="stylesheet" href="styles.css">
 
 <body>
-    <!-- NAVBAR SECTION -->
-    <!--
-    <nav class="navbar navbar-expand navbar-dark bg-dark">
-        <div class="container px-5">
-            <a class="navbar-brand" href="#!">Start Bootstrap</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    -->
 
-    <!-- New Navbar-->
+    <!-- Navbar -->
     <nav class="navbar bg-dark">
         <div class="container">
             <div class="col-5 justify-content-start">
@@ -85,10 +66,10 @@
     </header>
 
     <!-- FEATURES SECTION -->
-    <section class="py-5 border-bottom" id="features">
+    <section class="border-bottom" id="features">
         <div class="container px-5 my-5">
-            <div class="row gx-5">
-                <div class="col-lg-4 mb-5 mb-lg-0">
+            <div class="row ">
+                <div class="col-4">
                     <div class="SquareForIcon bg-primary bg-gradient text-white rounded-3 mb-3">
                         <i class="bi bi-collection"></i>
                     </div>
@@ -100,7 +81,7 @@
                         <i class="bi bi-arrow-right"></i>
                     </a>
                 </div>
-                <div class="col-lg-4 mb-5 mb-lg-0">
+                <div class="col-4">
                     <div class="SquareForIcon bg-primary bg-gradient text-white rounded-3 mb-3"><i
                             class="bi bi-building"></i>
                     </div>
@@ -112,7 +93,7 @@
                         <i class="bi bi-arrow-right"></i>
                     </a>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-4">
                     <div class="SquareForIcon bg-primary bg-gradient text-white rounded-3 mb-3"><i
                             class="bi bi-toggles2"></i>
                     </div>
@@ -179,7 +160,11 @@
                                     Monthly status reports
                                 </li>
                             </ul>
-                            <div class="d-grid"><a class="btn btn-outline-primary" href="#!">Choose plan</a></div>
+                            <div>
+                                <a class="btn btn-outline-primary" href="#!">
+                                    Choose plan
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -229,7 +214,11 @@
                                     Monthly status reports
                                 </li>
                             </ul>
-                            <div class="d-grid"><a class="btn btn-primary" href="#!">Choose plan</a></div>
+                            <div>
+                                <a href="#!">
+                                    Choose plan
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -277,7 +266,11 @@
                                     Monthly status reports
                                 </li>
                             </ul>
-                            <div class="d-grid"><a class="btn btn-outline-primary" href="#!">Choose plan</a></div>
+                            <div>
+                                <a class="btn btn-outline-primary" href="#!">
+                                    Choose plan
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -404,28 +397,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Old Footer -->
-    <!--
-    <footer class="py-5 bg-dark">
-        <div class="container mt-5">
-            <div class="row align-items-center">
-                <div class="col">
-                    <a href="">About</a>
-                </div>
-                <div class="col">
-                    <a href="">Contact</a>
-                </div>
-                <div class="col">
-                    <a href="">Terms of Use</a>
-                </div>
-                <div class="col">
-                    <a href="">Privacy Policy</a>
-                </div>
-            </div>
-        </div>
-    </footer>
--->
 
     <!-- New Footer-->
     <footer class="footer bg-dark ">
