--- a/HW13/Front_Project/SecondProject/index.html
+++ b/HW13/Front_Project/SecondProject/index.html
@@ -118,7 +118,7 @@
             </div>
             <div class="row gx-5 justify-content-center">
                 <!-- FREE CARD -->
-                <div class="col-lg-6 col-xl-4">
+                <div class="col-4">
                     <div class="card mb-5 mb-xl-0">
                         <div class="card-body p-5">
                             <div class="small text-uppercase fw-bold text-muted">Free</div>
@@ -169,7 +169,7 @@
                     </div>
                 </div>
                 <!--PRO CARD -->
-                <div class="col-lg-6 col-xl-4">
+                <div class="col-4">
                     <div class="card mb-5 mb-xl-0">
                         <div class="card-body p-5">
                             <div class="small text-uppercase fw-bold">
@@ -214,16 +214,15 @@
                                     Monthly status reports
                                 </li>
                             </ul>
-                            <div>
-                                <a href="#!">
-                                    Choose plan
-                                </a>
-                            </div>
+                            <a class="btn btn-outline-primary" href="#!">
+                                Choose plan
+                            </a>
                         </div>
                     </div>
                 </div>
+
                 <!-- ENTERPRISE CARD -->
-                <div class="col-lg-6 col-xl-4">
+                <div class="col-4">
                     <div class="card">
                         <div class="card-body p-5">
                             <div class="small text-uppercase fw-bold text-muted">Enterprise</div>
