--- a/HW13/Front_Project/SecondProject/index.html
+++ b/HW13/Front_Project/SecondProject/index.html
@@ -276,7 +276,7 @@
             </div>
         </div>
     </section>
-
+    <!-- Picture Section-->
     <section class="bg-light py-5">
         <div class="container bg-light ">
             <div class="row">
@@ -292,14 +292,12 @@
                         Another exciting bit of representative placeholder content.
                         This time, we've moved on to the second column.
                     </p>
-                    <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
                 </div>
                 <div class="col-4 gx-3">
                     <img src="img/testimonials-2.jpg" alt="nothing" style="border-radius:50%; width: 150px;">
                     <title>Placeholder</title>
                     <h2 class="justify-center">Fred S.</h2>
                     <p>And lastly this, the third column of representative placeholder content.</p>
-                    <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
                 </div>
                 <div class="col-4 gx-3">
                     <img src="img/testimonials-3.jpg" alt="nothing" style="border-radius:50%; width: 150px;">
@@ -308,7 +306,6 @@
                         Some representative placeholder content for the three
                         columns of text below the carousel.This is the first column.
                     </p>
-                    <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
                 </div>
             </div>
         </div>
