--- a/HW13/Front_Project/SecondProject/index.html
+++ b/HW13/Front_Project/SecondProject/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bootstrap</title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
@@ -74,7 +74,8 @@
                         <i class="bi bi-collection"></i>
                     </div>
                     <h2 class="h4 fw-bolder">Featured title</h2>
-                    <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
+                    <p><strong>Paragraph</strong> of text beneath the heading to explain the heading. We'll add onto it
+                        with another
                         sentence and probably just keep going until we run out of words.</p>
                     <a class="text-decoration-none" href="#!">
                         Call to action
@@ -284,7 +285,7 @@
                 <h2 class="text-center mb-5">What people are saying...</h2>
             </div>
             <div class="row mt-3">
-                <div class="col-4 gx-3 text-center">
+                <div class="col-4 gx-3 text-center hover-overlay hover-zoom hover-shadow">
                     <img class="mb-3" src="img/testimonials-1.jpg" alt="nothing"
                         style="border-radius:50%; width: 200px;">
                     <h5 class="text-center">Margaret E.</h5>
@@ -353,7 +354,7 @@
                 </div>
                 <!-- Submit Button-->
                 <div class="text-center">
-                    <button class="btn btn-primary disabled" id="submitButton" type="submit" style="width: 37rem">
+                    <button class="btn btn-primary" id="submitButton" type="submit" style="width: 37rem">
                         Submit
                     </button>
                 </div>
@@ -368,10 +369,10 @@
         <div class="container">
             <div class="row py-5 ">
                 <div class="col-6">
-                    <a class="mx-3" href="">About</a>
-                    <a class="mx-3" href="">Contact</a>
-                    <a class="mx-3" href="">Terms of Use</a>
-                    <a class="mx-3" href="">Privacy Policy</a>
+                    <a class="mx-3" href="" style="text-decoration:none">About</a>
+                    <a class="mx-3" href="" style="text-decoration:none">Contact</a>
+                    <a class="mx-3" href="" style="text-decoration:none">Terms of Use</a>
+                    <a class="mx-3" href="" style="text-decoration:none">Privacy Policy</a>
                 </div>
                 <div class="col-6 text-end">
                     <a class="mx-3" href=" #!">
