--- a/HW13/Front_Project/SecondProject/index.html
+++ b/HW13/Front_Project/SecondProject/index.html
@@ -285,8 +285,8 @@
                 <h2 class="text-center mb-5">What people are saying...</h2>
             </div>
             <div class="row mt-3">
-                <div class="col-4 gx-3 text-center hover-overlay hover-zoom hover-shadow">
-                    <img class="mb-3" src="img/testimonials-1.jpg" alt="nothing"
+                <div class="col-4 gx-3 text-center ">
+                    <img class="mb-3 img-thumbnail border-black" src="img/testimonials-1.jpg" alt="nothing"
                         style="border-radius:50%; width: 200px;">
                     <h5 class="text-center">Margaret E.</h5>
                     <p class="text-center">
